--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@ body{
   
   color: #000000;
   text-align: center;
-  font-family: "Arial";
+  font-family: 'Courier New';
   font-size: 16px;
   margin: 0;
   padding: 0;
